website/static/css/main.css
/* your custom css */
@media (max-width: 480px) {
    .headerTitleWithLogo {
        display: block !important;
    }
}

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (max-width: 735px) {
    .blockContent {
        display: flex;
        flex-direction: column;
        text-align: center;
    }
    .imageAlignSide .blockImage {
        display: block;
    }
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

.headerWrapper {
    padding-left: 0px;
    max-width: auto;
}

h1 {
    font-family: $titleFont;
    text-transform: uppercase;
    font-size: 32px;
}

.headerTitle, .headerTitleWithLogo {
    top: 5px;
    font-family: $titleFont;
    text-transform: uppercase;
    font-size: 32px;
}

.projectTitle img {
    max-width: 425px;
    width: 80%;
}

.homeSplashFade {
    padding-top: 50px;
}

.homeContainer .homeWrapper {
    padding: 0px 10px;
}

.mainContainer {
    margin-top: 3em;
    padding-top: 0px;
}

a {
    color: #218DA5;
}

.blockContent a {
        text-decoration: underline;
    }

h2 {
    font-family: $subTitleFont;
    font-size: 28px;
    font-weight: 600;
}

.button {
    font-family: $subTitleFont;
    font-size: 16px;
    font-weight: bold;
    color: white;
    background-color: #218DA5;
    border-color: #218DA5;
}

.imageAlignTop .blockImage {
    max-width: 100px;
    margin-bottom: -20px;
}

.button:hover{
    color: white;
    background-color: #35636E;
    border-color: #35636E;
}

h3 {
    font-family: $subTitleFont;
    font-size: 16px;
    font-weight: 800;
}

li {
    text-align: left;
}

